fixes, added comments