@@ -1,45 +1,31 @@
 package Main;
 
-import GUI.ConfirmBox;
 import GUI.ProgramGUI;
 import Tools.Constants;
 import javafx.application.Application;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
+//java --module-path C:\javafx-sdk-13.0.2\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar STL.jar
+
 public class Main extends Application {
 
-    Stage window;
+    public static void main(String[] args) {
+        launch(args);
+    }
 
     @Override
     public void start(Stage primaryStage) throws Exception {
 //        Parent root = FXMLLoader.load(getClass().getResource("sample.fxml"));
-//        StackPane layout = new StackPane();
-//        Scene scene = new Scene(layout, 700, 300);
 
-        window = primaryStage;
-        primaryStage.setOnCloseRequest(e -> {
-            e.consume();
-            boolean answer = ConfirmBox.display(Constants.exit_window_label, Constants.exit_text_label);
-            if (answer) {
-//                window.close();
-                System.exit(1);
-            }
-        });
-
-        Scene scene = new ProgramGUI(window).getScene();
+        Scene scene = new ProgramGUI(primaryStage).getScene();
         scene.getStylesheets().add("file:src/Main/style.css");
         primaryStage.setTitle(Constants.window_label);
         primaryStage.setScene(scene);
         primaryStage.show();
     }
 
-    public static void main(String[] args) throws InterruptedException {
 
-
-        launch(args);
-
-//        System.out.println(Utils.createRandomDistance());
-//        System.out.println(Utils.findRatio(2.432, 10.345));
-    }
 }
